# Experiment-2-Book-Recommendation

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GITHUB_SETUP_SUMMARY.md  LICENSE  QUICKSTART_GITHUB.md  README.md  docker-compose.yml  main.py  mlflow.db  nutrition_plans.py  nutrition_recommendation_model_api.ipynb  pyproject.toml  recommender.py  requirements-dev.txt  requirements.txt  schemas.py  setup.py  test_model_validation.py  train_and_save_model.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci_cd.yml
Data/processed/: book_lookup.csv  metadata.json
app/: dashboard.py  main.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
mlruns/1/models/m-b277dac71cc540e294815fcb4b71f7d0/artifacts/: MLmodel
mlruns/1/models/m-b277dac71cc540e294815fcb4b71f7d0/artifacts/data/: model.keras
models/: ncf_model.h5
notebooks/: nutrition_recommendation_model.ipynb  recommendation_system.ipynb
scripts/: run_pipeline.ps1  test_api.py
src/: eda_summary.py  mlflow.db  model.py  preprocess.py  train.py
src/mlruns/1/models/m-ee94806b22a640968e53d49db9537b75/artifacts/: MLmodel
templates/: index.html
tests/: test_api.py
